<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_sua_idade"
        android:inputType="number|textPersonName"
        android:padding="10dp"
        android:textColorHint="#757575"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="350dp"
        android:text="@string/alarme"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bt_lembrete"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="350dp"
        android:text="@string/lembrete"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/digite_seu_peso_kg"
        android:inputType="textPersonName|numberDecimal"
        android:padding="10dp"
        android:textColorHint="#757575" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="295dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="215dp"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="400dp"
        android:text="@string/hor_rio_selecionado"
        android:textColor="#3F51B5" />

    <TextView
        android:id="@+id/txt_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="425dp"
        android:text="@string/_00"
        android:textColor="#3F51B5"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="425dp"
        android:text=":"
        android:textColor="#3F51B5"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="425dp"
        android:text="@string/_00"
        android:textColor="#3F51B5"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="275dp"
        android:text="@string/resultado2"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ic_redefinir"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="550dp"
        android:text="Resetar" />

</RelativeLayout>